# last

./: .env  .gitignore  CHANGELOG.md  Dockerfile  LICENCE  Makefile  README.md  babel.cfg  dev-setup.sh  docker-compose.yml  dump.rdb  output.xlsx  pyproject.toml
.github/workflows/: deploy.yml  makefile.yml
app/: demo.db  demo.db-shm  demo.db-wal  import_export.py  main.py  models.py  providers.py  resources.py  routes.py  settings.py  tasks.py
app/templates/: dashboard.html
app/widgets/: filters.py
dashboard/: constants.py  enums.py  import_export.py  main.py  models.py  providers.py  resources.py  routes.py  settings.py  tasks.py
dashboard/biz_models/: __init__.py  audit_model.py  datamanager.py  dataset.py  eval_model.py  labeling_model.py  risk.py  task_manage_model.py  test_model.py
dashboard/biz_routers/: __init__.py  audit.py  datamanager.py  dataset.py  eval_model.py  labeling_router.py  risk.py  task_manager.py
dashboard/data_labeling/: __init__.py  labeling.py  labeling_router.py  mock_data_into_sqlite.py
dashboard/mock_data/: clean_old.py  mock_audit_data.py  mock_data.py  mock_dataset.py  mock_labeling_data.py  mock_llms.py  mock_report.py  mock_risk.py  mock_risk_demo.py  mock_task.py
dashboard/static/mdSave/: init.md
dashboard/static/reportSave/: output.xlsx  table_result.xlsx
dashboard/templates/: create_eval.html  dataset.html  delete.html  label.html
dashboard/templates/admin/: admin_action.html
dashboard/templates/audit/: audit.html  audit_detail.html
dashboard/templates/auditpage/: audit.html  audit_brief_dataset.html  audit_detail.html  progress_show.html  revise.html
dashboard/templates/dataset/: action_dataset.html  risk.html  risk_second.html  time.html  upload_dataset.html
dashboard/tools/: allocate_task.py  statistic.py
dashboard/utils/: converter.py  string_utils.py  util.py
dashboard/widgets/: displays.py  filters.py
docs/examples/: alle_pin.py  custom_front_end.py  evaluating.py  excel模型推理样例.xlsx  macro.py  puyu.py  quick_start.py  reporting.py  testset.csv  testset2.csv  标注数据样例.csv
examples/: enums.py  import_export.py  main.py  models.py  providers.py  resources.py  routes.py  settings.py  tasks.py
examples/templates/: base.html  notification.html  sponsor_username.html
examples/widgets/: displays.py  filters.py
fastapi_admin/: constants.py  depends.py  enums.py  exceptions.py  file_upload.py  i18n.py  middlewares.py  models.py  resources.py  template.py  utils.py
fastapi_admin/providers/: admin_log.py  import_export.py  login.py  notification.py  permission.py  search.py
fastapi_admin/routes/: __init__.py  others.py  resources.py
fastapi_admin/templates/: layout-navbar.html  layout.html
fastapi_admin/widgets/: displays.py  filters.py  inputs.py
last/: __init__.py  config.py  main.py
last/client/: __init__.py  alle-pin.py  call_llm.py  client.py  eval_funcs.py  puyu.py  report.py  task_list.py
last/llms/: alles_llm.py
last/llms/model/: __init__.py  (+39 more)
last/newevaluate/: .gitignore  README.md  utlis.py
last/query/: .gitignore  __init__.py  id_generator.py  scheduler.py  task.py  test.py  test_data.py  test_scheduler.py
last/services/: __init__.py  app.py  constants.py  depends.py  exceptions.py  file_upload.py  i18n.py  middlewares.py  models.py  resources.py  template.py  websockets.py
last/types/: annotation.py  annotation_dataset.py  api_models.py  base.py  converters.py  dataset.py  db_models.py  evaluation.py  evaluation_model.py  evaluationset.py  labeldata.py  llm.py  model.py  organization_models.py  plan.py  prompt_template.py  public.py  report.py  sensitive_shuffle.py  task.py  testset_model.py  user_models.py
llm_api_sdk/: README.md  readme.md  requirements.txt  test_llm_api.py
llm_api_sdk/examples/: base_model.py  http_fundamentalt_api_model.py  http_multiple_keys_api_model.py  http_parse_exampl_api_model.py
llm_api_sdk/src/: base_model.py  llm_api.py  utils.py
llm_api_sdk/test_data/: dataset.xlsx
tests/: annotation_test.py  test_base.py  test_dataset.py  test_eval.py  test_llm_api.py  test_llm_api_async.py  test_macro_progarmming.py  test_metaprogramming.py  test_pipeline.py  test_scheduler.py  test_task.py
tests/bak/: conftest.py  manual_tests.py  test_db_manager.py  test_docker_utils.py  test_router_app_variant.py
tests/test_evalution/: test_eval.py
(+160 files in other folders)
